[package]
name = "cargo-all-features"
version = "1.9.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
description = "A Cargo subcommand to build and test all feature flag combinations"
repository = "https://github.com/frewsxcv/cargo-all-features"
license = "MIT/Apache-2.0"
readme = "./README.md"

[[bin]]
name = "cargo-all-features"
path = "src/bin/cargo-all-features.rs"

[dependencies]
json = "0.12"
itertools = "0.14"
termcolor = "1"
clap = { version = "4.5.32", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
assert_fs = "1.1.2"
regex = "1.11.1"
